--- a/portofolio/package.json
+++ b/portofolio/package.json
@@ -2,7 +2,7 @@
   "name": "portofolio",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://GoldenLin9.github.io/portofolio",
+  "homepage": "https://goldenlin9.github.io/Portfolio/",
   "dependencies": {
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.6.3",
